[package]
name = "wtp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
futures-util = "0.3.32"
h3 = "0.0.8"
h3-quinn = { version = "0.0.10", features = ["datagram", "tracing"] }
h3-webtransport = "0.1.2"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "http2"] }
quinn = "0.11.9"
rustls = "0.23.40"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.2", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
