[package]
name = "wtp"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = { version = "0.11", default-features = false, features = [
    "bloom",
    "log",
    "platform-verifier",
    "runtime-tokio",
    "aws-lc-rs",
    "rustls-aws-lc-rs",
] }
anyhow = "1.0"
bytes = "1.12"
futures-util = "0.3"
h3 = "0.0"
h3-quinn = { version = "0.0", features = ["datagram", "tracing"] }
h3-webtransport = "0.1"
http = "1.4"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = [
    "client",
    "client-legacy",
    "http1",
    "http2",
] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
tokio-rustls = "0.26.4"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls-pemfile = "2.2"
fast-socks5 = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.7"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
